Tue May  4 07:40:02 2004  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Updated information about the use of 'gendir' without
          'output_option' set in a custom file definition.

Mon May  3 23:12:37 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * config/openssl.mpb:

          Some Linux OpenSSL installations compile in Kerberos support.
          Add the Kerberos include path to preprocessor include path.

Mon May  3 12:17:10 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          By default, refer to the dll based template input files for static
          template input.  If the template supports generating static
          projects, then the project creator module will have overridden
          the methods to return the correct template input files.

        * templates/bmake.mpd:
        * templates/em3vcp.mpd:
        * templates/nmake.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:

          These template files have been changed in a similar fashion to
          Justin Michel's changes from Sat May  1 15:20:00 2004.

Mon May  3 10:49:28 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed yet another bug in the relative replacement code section.
          If a portion of the current path was found in the replacement
          value, it would assume that the whole thing was to be replaced.
          This is obviously wrong and has been corrected.

Sat May  1 15:20:00 2004  Justin Michel  <michel_j@ociweb.com>

        * templates/vc7.mpd:
        * templates/vc7dll.mpt:
        * templates/vc7lib.mpt:

          Resource Files are only for exe or dll binaries, not for static
          libs. Added a check for type_is_static, so that the resource files
          section is not created.  type_is_* should be defined outside of the
          individual configurations. This change allows checking