@@ -1,3 +1,13 @@
+Wed May  5 12:34:51 2004  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/Creator.pm:
+        * modules/ProjectCreator.pm:
+
+          Changed the way that duplication additions for libpaths, includes
+          and libs are handled.  We now silently ignore duplicate additions
+          and maintain original assignment order.  This fixes problems with
+          static linking on UNIX.
+
 Tue May  4 07:40:02 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * README:
